# MES

./: CMakeLists.txt  dane.txt  dane2.txt  main.cpp
BoundaryConditions/: BoundC.cpp  BoundC.h
CMatrix/: MatrixC.cpp  MatrixC.h
DataStructures/Element/: Element.cpp  Element.h
DataStructures/Grid/: Grid.cpp  Grid.h
DataStructures/Node/: Node.cpp  Node.h
HMatrix/: HMatrix.cpp  HMatrix.h
Jacobian/: Jacobian.cpp  Jacobian.h
Jacobian/Derivatives/: Derivatives.cpp  Derivatives.h
Jacobian/JacobiMatrix/: J.cpp  J.h
ShapeFunctions/: shapeF.cpp  shapeF.h
Utils/: GausianElimination.h  MatrixInitializer.h  ReadFile.h
VectorP/: VectorP.cpp  VectorP.h
